--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
+    "express-rate-limit": "^7.4.0",
     "form-data": "^4.0.0",
     "p-queue": "^8.0.1",
     "puppeteer": "^22.9.0",
